trymito: fix mobile spacing

--- a/trymito.io/components/FeatureSquares/FeatureSquares.module.css
+++ b/trymito.io/components/FeatureSquares/FeatureSquares.module.css
@@ -1,3 +1,13 @@
+.feature_squares_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.feature_squares_container > * {
+    margin-top: 10px;
+}
+
 .feature_card_container {
     flex-direction: column;
     display: flex;
@@ -12,6 +22,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     width: 80%;
 }
 
@@ -20,6 +31,26 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 250px;
+    text-align: center;
     margin-top: 20px;
+}
+
+.feature_squares_container a {
+    font-size: 1.5rem;
+}
+
+@media only screen and (min-width: 50em) {
+    .feature_card_text_container {
+        height: 10rem;
+    }
+
+    .feature_card_image_container {
+        margin-top: 20px;
+        height: 250px;
+    }
+
+    .feature_squares_container a {
+        font-size: inherit;
+    }
+
 }
